--- a/assets/style.css
+++ b/assets/style.css
@@ -1,7 +1,19 @@
+*{
+    box-sizing: border-box;
+}
+
 :root{
     --pirate-blue: rgb(100, 130, 189); 
     --pirate-tan: #d1cba7;
     --pirate-orange: rgb(214, 150, 54);
+    --pirate-text: black;
+}
+header{
+    text-align: center;
+}
+.card header{
+    justify-content: center;
+    text-align: center;
 }
 
 main{
@@ -13,4 +25,9 @@ main{
     border: 5px solid var(--pirate-tan);
     padding: 10px;
     margin: 20px;
+    max-width: 27%;
+}
+
+footer{
+    text-align: center;
 }
